add lppd & rewards
